# xmpp-bot

./: .env.example  .gitignore  LICENSE  README.md  install.bat  pyproject.toml  start.bat
src/xmpp_bot/: __init__.py  bot.py  exceptions.py  handlers.py
src/xmpp_bot/config/: __init__.py  constants.py  settings.py
tests/: conftest.py  test_bot.py  test_finalizer.py  test_handlers.py  test_reconnection.py  test_settings.py
tools/: send_test_message.bat  send_test_message.py  tests.bat
